--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "main": "./dist/marionette-service.js",
   "scripts": {
-    "test": "gulp",
+    "test": "gulp test",
     "test-browser": "gulp test-browser",
     "build": "gulp build",
     "coverage": "gulp coverage"
@@ -26,37 +26,37 @@
   "author": "Ben McCormick",
   "license": "MIT",
   "peerDependencies": {
+    "backbone": "^1.3.3",
     "backbone.radio": "^2.0.0",
-    "underscore": "^1.8.3",
-    "backbone": "^1.3.3"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "backbone": "^1.4.0",
     "backbone.radio": "^2.0.0",
-    "underscore": "1.8.3",
-    "backbone": "^1.3.3",
-    "jquery": "^3.3.1",
-    "browserify": "^8.1.1",
-    "chai": "^2.0.0",
-    "gulp-notify": "^2.1.0",
-    "del": "^1.1.1",
-    "glob": "^4.3.5",
-    "gulp": "^3.8.10",
-    "gulp-header": "^1.2.2",
-    "gulp-istanbul": "^0.6.0",
-    "gulp-jscs": "^1.4.0",
-    "gulp-jshint": "^1.9.0",
-    "gulp-livereload": "^3.4.0",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^0.6.6",
-    "gulp-rename": "^1.2.0",
+    "browserify": "^16.2.3",
+    "chai": "^4.2.0",
+    "del": "^4.1.1",
+    "glob": "^7.1.4",
+    "gulp": "^4.0.2",
+    "gulp-header": "^2.0.7",
+    "gulp-istanbul": "^1.1.3",
+    "gulp-jscs": "^4.1.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-livereload": "^4.0.1",
+    "gulp-load-plugins": "^1.6.0",
+    "gulp-mocha": "^6.0.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^1.4.0",
     "gulp-uglifyjs": "^0.6.0",
-    "jshint-stylish": "^1.0.0",
-    "mocha": "^2.1.0",
-    "run-sequence": "^1.0.2",
-    "sinon": "^1.12.2",
-    "sinon-chai": "^2.7.0",
-    "vinyl-source-stream": "^1.0.0"
+    "jquery": "^3.3.1",
+    "jshint-stylish": "^2.2.1",
+    "mocha": "^6.1.4",
+    "run-sequence": "^2.2.1",
+    "sinon": "^7.3.2",
+    "sinon-chai": "^3.3.0",
+    "underscore": "1.9.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "libraryOptions": {
     "entryFileName": "marionette-service",
